--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "^17.1.2",
     "@angular/compiler": "^17.1.2",
     "@angular/core": "^17.1.2",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.1.2",
     "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^17.1.2",
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
+    "bootstrap": "^5.3.2",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
